// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Salesforce disaster recovery health check stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "salesforcedisasterrecoveryhealthcheck7A2C7C8E": {
      "DependsOn": [
        "salesforcedisasterrecoveryhealthcheckServiceRoleDefaultPolicy0ACEC506",
        "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/salesforce-disaster-recovery-health-check/salesforce-disaster-recovery-health-check.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "salesforce-disaster-recovery-health-check",
            "STACK": "membership",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "salesforce-disaster-recovery-health-check-CODE",
        "Handler": "dist/lambda/main.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "salesforce-disaster-recovery-health-check",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "salesforce-disaster-recovery-health-check",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "salesforcedisasterrecoveryhealthcheckServiceRoleDefaultPolicy0ACEC506": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/salesforce-disaster-recovery-health-check/salesforce-disaster-recovery-health-check.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/salesforce-disaster-recovery-health-check",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/salesforce-disaster-recovery-health-check/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "salesforcedisasterrecoveryhealthcheckServiceRoleDefaultPolicy0ACEC506",
        "Roles": [
          {
            "Ref": "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "salesforcedisasterrecoveryhealthchecksalesforcedisasterrecoveryhealthcheckcron090AllowEventRulesalesforcedisasterrecoveryhealthcheckCODEsalesforcedisasterrecoveryhealthcheck1E72AB499146667B": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "salesforcedisasterrecoveryhealthcheck7A2C7C8E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "salesforcedisasterrecoveryhealthchecksalesforcedisasterrecoveryhealthcheckcron090E13FC178",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "salesforcedisasterrecoveryhealthchecksalesforcedisasterrecoveryhealthcheckcron090E13FC178": {
      "Properties": {
        "ScheduleExpression": "cron(0 9 * * ? *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "salesforcedisasterrecoveryhealthcheck7A2C7C8E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`The Salesforce disaster recovery health check stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "salesforcedisasterrecoveryhealthcheck7A2C7C8E": {
      "DependsOn": [
        "salesforcedisasterrecoveryhealthcheckServiceRoleDefaultPolicy0ACEC506",
        "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/salesforce-disaster-recovery-health-check/salesforce-disaster-recovery-health-check.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "salesforce-disaster-recovery-health-check",
            "STACK": "membership",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "salesforce-disaster-recovery-health-check-PROD",
        "Handler": "dist/lambda/main.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "salesforce-disaster-recovery-health-check",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "salesforce-disaster-recovery-health-check",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "salesforcedisasterrecoveryhealthcheckServiceRoleDefaultPolicy0ACEC506": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/salesforce-disaster-recovery-health-check/salesforce-disaster-recovery-health-check.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/salesforce-disaster-recovery-health-check",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/salesforce-disaster-recovery-health-check/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "salesforcedisasterrecoveryhealthcheckServiceRoleDefaultPolicy0ACEC506",
        "Roles": [
          {
            "Ref": "salesforcedisasterrecoveryhealthcheckServiceRoleAAFD4114",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "salesforcedisasterrecoveryhealthchecksalesforcedisasterrecoveryhealthcheckcron090AllowEventRulesalesforcedisasterrecoveryhealthcheckPRODsalesforcedisasterrecoveryhealthcheck330F201C012EB046": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "salesforcedisasterrecoveryhealthcheck7A2C7C8E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "salesforcedisasterrecoveryhealthchecksalesforcedisasterrecoveryhealthcheckcron090E13FC178",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "salesforcedisasterrecoveryhealthchecksalesforcedisasterrecoveryhealthcheckcron090E13FC178": {
      "Properties": {
        "ScheduleExpression": "cron(0 9 * * ? *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "salesforcedisasterrecoveryhealthcheck7A2C7C8E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;
